# advent

./: README.md
2020/: README.md
2020/day01/: Cargo.toml
2020/day01/src/: main.rs
2020/day03/: Cargo.toml
2020/day04/src/: main.rs
2020/day05/: Cargo.toml
2020/day06/: Cargo.toml
2020/day06/src/: main.rs
2020/day07/: Makefile
2022/day01/: Cargo.toml  README.md
2022/day01/src/: main.rs
2023/: Cargo.toml  README.md
2023/inputs/day12/: tricky1  tricky2
2023/notes/: day05.xopp  day06.xopp  day12.txt  day12.xopp  day13.parallel-analysis.ods
2023/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  lib.rs  skeleton-day00.rs
2023/tests/: common.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  skeleton-day00.rs  skeleton-day00.rs.in
day01/: Makefile
day01/src/: main.rs
day02/: Cargo.toml
day02/src/: main.rs
day03/src/: main.rs
day04/: Cargo.toml  Makefile
day04/src/: main.rs
day05/: Makefile
day05/src/: main.rs
day06/src/: main.rs
day07/: Cargo.toml
day07/src/: main.rs
