[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
clio = { version = "0.3.4", features = ["clap", "clap-parse"] }
env_logger = "0.10.1"
log = { version = "0.4.20", features = ["std"] }
